--- a/index.html
+++ b/index.html
@@ -410,3 +410,12 @@
 		
 	</body>
 </html>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X38Z7KGLHT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X38Z7KGLHT');
+</script>
