--- a/index.html
+++ b/index.html
@@ -56,7 +56,16 @@
 					<span>Mr</span>
 				</div>
 			</div>
-		<!-- END PRELOADER -->		
+		<!-- END PRELOADER -->	
+		<!-- Google tag (gtag.js) -->
+       <script async src="https://www.googletagmanager.com/gtag/js?id=G-X38Z7KGLHT"></script>
+       <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-X38Z7KGLHT');
+         </script>
 		
 		<!-- START NAVBAR -->
 			<nav class="navbar navbar-toggleable-sm fixed-top navbar-light bg-faded site-navigation dark_bg_menu">
